--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,44 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
+# ==============================
+# Dependencies
+# ==============================
+node_modules/
+.pnp
 .pnp.js
 
-# testing
-/coverage
+# ==============================
+# Build output
+# ==============================
+dist/
+build/
 
-# production
-/build
-
-# misc
-.DS_Store
+# ==============================
+# Environment variables
+# ==============================
+.env
+.env.*
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# ==============================
+# Logs
+# ==============================
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# ==============================
+# OS / Editor
+# ==============================
+.DS_Store
+
+# ==============================
+# Testing
+# ==============================
+coverage/
+
+# ==============================
+# Vercel
+# ==============================
+.vercel
