fix: allow public PWA files (manifest, sw, icons)

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,11 @@
 {
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/"
-    }
+  "routes": [
+    { "src": "/manifest.json", "dest": "/manifest.json" },
+    { "src": "/sw.js", "dest": "/sw.js" },
+    { "src": "/icon-192.png", "dest": "/icon-192.png" },
+    { "src": "/icon-512.png", "dest": "/icon-512.png" },
+
+    { "src": "/(.*)", "dest": "/" }
   ],
   "headers": [
     {
